--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "RTRClass.type.pl"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "RTRClass"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
