updated config file

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ baseurl: ""
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
+future: false
+
 # Name of website
 title: Real-time rendering class
 
