--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
 language: ruby
 rvm:
-  - 2.4.1
-
-before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
+  - 2.4.4
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: ./script/cibuild
+script: chmod +x ./script/jekyll-build.sh && ./script/jekyll-build.sh
 
 # branch whitelist, only for GitHub Pages
 branches:
