--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: chmod +x ./script/jekyll-build.sh && ./script/jekyll-build.sh
+script: chmod +x ./script/jekyll-rebuild.sh && ./script/jekyll-rebuild.sh
 exclude: [vendor]
 
 # branch whitelist, only for GitHub Pages
