Scheduling posts with jekyll tutorial

--- a/_config.yml
+++ b/_config.yml
@@ -237,6 +237,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jemoji
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
