--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ navbar-links:
     - LearnOpenGL.com: "pages/learnopengl"
     - Other: "pages/other"
   Projects: "pages/projects"
+  Publications: "pages/publications"
   About me: "pages/aboutme"
 
 # Image to show in the navigation bar - image must be a square (width = height)
@@ -238,6 +239,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
   - jemoji
+  - jekyll-scholar
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
