--- a/_config.yml
+++ b/_config.yml
@@ -234,6 +234,32 @@ prose:
           label: "Publish"
           help: "Check to publish post, uncheck to hide."
 
+scholar:
+  style: apa
+  locale: en
+
+  sort_by: none
+  order: ascending
+
+  group_by: none
+  group_order: ascending
+
+  source: ./_bibliography
+  repository: pdf
+  bibliography: references.bib
+  bibliography_template: bib
+
+  replace_strings: true
+  join_strings:    true
+
+  use_raw_bibtex_entry: false
+
+  details_dir:    bibliography
+  details_layout: bibtex.html
+  details_link:   Details
+
+  query: "@*"
+
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
