--- a/_config.yml
+++ b/_config.yml
@@ -265,7 +265,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
   - jemoji
-  - jekyll-scholar
+  - jekyll/scholar
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
