--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -1,10 +1,8 @@
 name: rebuild
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  schedule:
+    - cron:  '0 6 * * 1,3,5' # Runs every Mon, Wed and Fri at 6am
 
 jobs:
   github-pages:
